Problem with table positioning on mobiles fixed.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -357,11 +357,12 @@ body {
 
 .main {
 	position: relative;
+	margin: 0 auto;
 	display: none;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	min-height: 80vh;
+	height: 80vh;
 	width: 100vw;
 	max-width: 1200px;
 	font-family: inherit;
@@ -385,7 +386,7 @@ body {
 		background-attachment: fixed;
 		background-size: cover;
 	}
-	
+
 	&__logo-img {
 		position: fixed;
 		top: 55%;
@@ -400,7 +401,7 @@ body {
 
 	.scores {
 		position: absolute;
-		top: 40px;
+		top: 50px;
 		display: flex;
 		flex-grow: 1;
 		flex-direction: column;
@@ -443,9 +444,11 @@ body {
 	// STANDINGS
 
 	.standings {
-		position: absolute;
-		top: 2vh;
 		display: table;
+		position: absolute;
+		top: 50px;
+		left: 50%;
+		transform: translateX(-50%);
 		font-size: 1.5rem;
 		background-color: rgba(255, 255, 255, 0.7);
 		color: #2e4f4f;
@@ -528,7 +531,6 @@ body {
 	}
 
 	.main {
-
 		.standings {
 			font-size: 1rem;
 
@@ -575,7 +577,7 @@ body {
 			background-size: 10%;
 			background-position: left 1rem bottom 0.6rem;
 		}
-	
+
 		&__link:nth-child(1),
 		&__link:nth-child(3) {
 			background-position: left 0.1rem bottom 0.6rem;
@@ -587,7 +589,7 @@ body {
 	}
 
 	.main {
-	
+		height: 88vh;
 		&__img {
 			height: 88vh;
 		}
@@ -598,7 +600,7 @@ body {
 	}
 }
 @media (max-height: 370px) {
-	.main{
+	.main {
 		&__logo-img {
 			width: 150px;
 			height: 150px;
